# NBTCompare

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  release.yml
src/: lib.rs
src/nbtcompare/: __init__.py  _core.pyi
