[project]
name = "nbtcompare"
version = "0.1.0"
description = "compare NBT data as quickly as possible"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Pearsteam", email = "93873756+Birnendampf@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 4 - Resilient",
    "Programming Language :: Rust",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.urls]
Source = "https://github.com/Birnendampf/NBTCompare"

[tool.maturin]
module-name = "nbtcompare._core"
python-packages = ["nbtcompare"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[tool.uv.sources]
minedelta = { git = "https://github.com/Birnendampf/MineDelta" }

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "minedelta",
    "pytest>=9.0.2",
]
